--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "flatpickr": "^4.6.13",
+    "i": "^0.3.7",
     "vue": "^3.2.13"
   },
   "devDependencies": {
